fix ling github

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="redes">
         <h3>Elavorado por:</h3>
         <p>Angel Hernandez</p>
-        <a href="https://github.com/AngelhtProgrammer" target="_blank"
+        <a href="https://github.com/AngelhtProgrammer/Countdown" target="_blank"
           ><img src="img/github.png" width="75px" height="75px" alt=""
         /></a>
 </footer>
