--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 </body>
 <footer>
     <div class="redes">
-        <h3>Elavorado por:</h3>
-        <p>Angel Hernandez</p>
+        <h3>Elaborado por:</h3>
+        <p>Ángel Hernández</p>
         <a href="https://github.com/AngelhtProgrammer/Countdown" target="_blank"
           ><img src="img/github.png" width="75px" height="75px" alt=""
         /></a>
